# clipflow

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  README_DOCKER.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-cleanup.yml  docker-description.yml  docker.yml  pages.yml  publish.yml  test.yml
clipflow/: __init__.py  _ffmpeg.py  _ffmpeg_manager.py  cli.py  core.py  models.py  parser.py
docs/: index.html
examples/: highlight_reel.py
tests/: test_cli.py  test_clipflow.py
