[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clipflow"
version = "0.1.0"
description = "A clean Python wrapper for ffmpeg clipping and processing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
